<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoNDFM.DetailInfoActivity"
    android:visibility="visible"
    android:background="@color/colorWhite">


    <RelativeLayout
        android:id="@+id/relativelayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detailinfoactivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/ivFullImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        android:src="@drawable/default_image">
    </ImageView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvFullJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textSize="25dp"
                android:maxLines="2"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/colorBlack">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorLightGrey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/deskripsi"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="15dp">
                </TextView>
                <TextView
                    android:id="@+id/tvFullDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="15dp">
                </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorLightGrey"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="15dp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/syaratdanketentuan">
                </TextView>
                <TextView
                    android:id="@+id/tvFullTerm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="15dp">
                </TextView>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>